--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "from-exponential",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Lightweight module to convert number from exponential notaton to a human readable string",
   "main": "dist/index.js",
   "module": "src/index.js",
@@ -41,16 +41,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.0",
-    "babel-preset-env": "^1.7.0",
-    "coveralls": "^3.0.2",
-    "eslint": "^5.2.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "jest": "^23.4.1",
-    "rollup": "^0.63.4",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-terser": "^1.0.1"
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "babel-jest": "^26.6.3",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
+    "rollup": "^2.46.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
